# tinyDJ-android

./: .gitignore  LICENSE  README.md  build.sh  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native_audio_engine.cpp
app/src/main/java/com/tinydj/: MainActivity.kt  TinyDjApp.kt
app/src/main/java/com/tinydj/core/audio/: AudioEngine.kt  FakeAudioEngine.kt  OboeAudioEngine.kt  PlaybackService.kt
app/src/main/java/com/tinydj/core/haptics/: HapticEngine.kt  HapticSpec.kt  HapticThrottler.kt  SystemHapticEngine.kt
app/src/main/java/com/tinydj/di/: AppContainer.kt
app/src/main/java/com/tinydj/ui/deck/: DeckContent.kt  DeckScreen.kt  DeckViewModel.kt  DeviceControls.kt  MainTabScreen.kt  MiniLcd.kt  Oled.kt  OledScreens.kt  ReelDisc.kt  RotaryKnob.kt  SettingsView.kt  SideRocker.kt  SystemMenu.kt  TransportKeys.kt
app/src/main/java/com/tinydj/ui/theme/: Color.kt  DeviceStyle.kt  Theme.kt  Type.kt
app/src/main/res/drawable/: ic_disc.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher_round.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/test/java/com/tinydj/: DeckRenderTest.kt  OledRenderTest.kt
docker/: Dockerfile
gradle/: libs.versions.toml
